--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,7 +16,10 @@
 
     <div class="button-container">
       <ion-button shape="round" expand="block" (click)="goToLogin()" cl class="get-started-button">
-        Get Started
+        Login
+      </ion-button>
+      <ion-button shape="round" expand="block" (click)="goToSignup()" cl class="get-started-button">
+        Signup
       </ion-button>
     </div>
   </div>
