--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -23,6 +23,9 @@
   .button-container {
     margin-bottom: 50px;
     padding: 0 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
   
   .get-started-button {
